kubernetes/manifests/traefik/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure

spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - ${WHOAMI_SUB_DOMAIN}.${BASE_DOMAIN}
      secretName: whoami-certificate
    - hosts:
        - ${PROXY_SUB_DOMAIN}.${BASE_DOMAIN}
      secretName: proxy-certificate
  rules:
    - host: ${WHOAMI_SUB_DOMAIN}.${BASE_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: whoami
                port:
                  name: web

    - host: ${PROXY_SUB_DOMAIN}.${BASE_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: traefik
                port:
                  name: dashboard
